test_regress/t/t_property_var_unsup.out
%Error-UNSUPPORTED: t/t_property_var_unsup.v:18:13: Unsupported: sequence match items
   18 |       (valid, prevcyc = cyc) |=> (cyc == prevcyc + 1);
      |             ^
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error-UNSUPPORTED: t/t_property_var_unsup.v:17:11: Unsupported: property variable declaration
   17 |       int prevcyc;
      |           ^~~~~~~
%Error-UNSUPPORTED: t/t_property_var_unsup.v:24:31: Unsupported: property variable default value
   24 |    property with_def(int nine = 9);
      |                               ^
%Error: Exiting due to
